--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaBlue/Html/BocDateTimeValue.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaBlue/Html/BocDateTimeValue.css
@@ -10,7 +10,7 @@ span.bocDateValue
   overflow: hidden;
   height: 1.7em;
   margin-right: 0.2em;
-  min-width: 12em;
+  min-width: 14em;
   padding: 0;
   margin: 0;
   white-space: nowrap;
@@ -120,10 +120,10 @@ body.webkit span.bocDateValue a.bocPicker12Hours
   top: 0.25em;
 }
 
-body.webkit span.bocDate24Hours,
-body.webkit span.bocDate12Hours
+body.webkit span.bocDateValue span.bocDate24Hours,
+body.webkit span.bocDateValue span.bocDate12Hours
 {
-  right:8.25em;
+  right:2.75em;
 }
 
 body.webkit span.bocDate24HoursWithSeconds,
